tests/integration/errors/test_main_args_multiple.sn
# Error test: main with multiple parameters (only one str[] allowed)

fn main(a: str[], b: str[]): void =>
    print("Should not compile\n")
